--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" href="style.css" />
 		<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 	</head>
 	<body>
 		<nav>
@@ -18,9 +19,9 @@
 
 				<div class="nav-container">
 					<div class="links">
-						<a href="#home" class="link">Home</a>
+						<a href="#Home" class="link">Home</a>
 						<a href="#skills" class="link">Skills</a>
-						<a href="#intro" class="link">Introduction</a>
+						<!-- <a href="#intro" class="link">Introduction</a> -->
 						<a href="#services" class="link">Services</a>
 						<a href="#contact" class="link">Contact</a>
 					</div>
@@ -43,9 +44,9 @@
 			</div>
 
 			<div class="dropdown" id="dropdown">
-				<a href="#home" class="link">Home</a>
+				<a href="#Home" class="link">Home</a>
 				<a href="#skills" class="link">Skills</a>
-				<a href="#intro" class="link">Introduction</a>
+				<!-- <a href="#intro" class="link">Introduction</a> -->
 				<a href="#services" class="link">Services</a>
 				<a href="#contact" class="link">Contact</a>
 
@@ -63,7 +64,7 @@
 		</nav>
 
 		<section>
-			<div class="content">
+			<div class="content" id="Home">
 				<div class="main-content">
 					<h1 data-aos="fade-right" data-aos-duration="1500">Hi! I Am</h1>
 					<span data-aos="fade-left" data-aos-duration="1500" data-aos-delay="200">Bekhruz</span>
@@ -95,11 +96,113 @@
 					<img src="/photo_2025-04-19_18-23-09.jpg" data-aos="zoom-out" data-aos-duration="2000" />
 				</div> -->
 			</div>
-		</section>
-		<!--
-    - #FOOTER
 
-  -->
+			<!-- skill -->
+
+
+
+
+		</section>
+
+			 <!-- Skills section -->
+        <section id="skills">
+            <div class="skills-container">
+                <h2 class="skills-title">Mobilograf Ko'nikmalarim</h2>
+                <p class="skills-description">
+                    Men har xil turlaridagi mobil fotosuratlarni suratga olishni yaxshi bilaman. Mobilograf sifatida
+                    professional fotosuratlar va videolarni yaratishga qaratilgan ko'nikmalarim mavjud. Quyidagi texnikalar
+                    bilan ishlayman:
+                </p>
+                <div class="skills-list">
+                    <div class="skill-item">
+                        <i class="fas fa-camera"></i>
+                        <h3>Mobil Kameralar</h3>
+                        <p>Mobil telefonlarning barcha kameralari bilan ishlash tajribam mavjud.</p>
+                    </div>
+                    <div class="skill-item">
+                        <i class="fas fa-video"></i>
+                        <h3>Videografiya</h3>
+                        <p>Mobil telefonlar orqali yuqori sifatli videolarni suratga olish.</p>
+                    </div>
+                    <div class="skill-item">
+                        <i class="fas fa-lightbulb"></i>
+                        <h3>Yoritish Texnikalari</h3>
+                        <p>To'g'ri yoritishni tanlash va fotosuratlarda mukammal effektlar yaratish.</p>
+                    </div>
+                    <div class="skill-item">
+                        <i class="fas fa-edit"></i>
+                        <h3>Post-Processing</h3>
+                        <p>Fotografiyalarni mobil ilovalar yordamida tahrirlash va ranglarni to'g'irlash.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </section>
+
+		<!-- Sercices -->
+
+		<section id="services">
+    <div class="services-container">
+        <h2 class="services-title" data-aos="fade-up" data-aos-duration="1500">Xizmatlarim</h2>
+        <p class="services-description" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="200">
+            Mobilograf sifatida sizga professional fotosuratlar va videolarni taqdim etaman. Quyidagi xizmatlarim
+            orqali brendingizni kuchaytiring va ijtimoiy tarmoqlarda o'z auditoriyangizni oshiring.
+        </p>
+        <div class="services-list">
+            <div class="service-item" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="400">
+                <i class="fas fa-camera"></i>
+                <h3>Fotosessiya</h3>
+                <p>Turli yo'nalishlar bo'yicha fotosessiyalarni mobil telefon orqali taqdim etaman.</p>
+            </div>
+            <div class="service-item" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="600">
+                <i class="fas fa-video"></i>
+                <h3>Videografiya</h3>
+                <p>Mobil telefonlar yordamida yuqori sifatli videolarni suratga olish va montaj qilish.</p>
+            </div>
+            <div class="service-item" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="800">
+                <i class="fas fa-edit"></i>
+                <h3>Post-Processing</h3>
+                <p>Fotolarni tahrirlash, ranglarni yaxshilash va vizual ta'sirlarni yaratish.</p>
+            </div>
+            <div class="service-item" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000">
+                <i class="fas fa-mobile-alt"></i>
+                <h3>Mobil Ilovalar uchun Kontent</h3>
+                <p>Mobil ilovalar va saytlar uchun vizual kontent yaratish va optimallashtirish.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Contact -->
+<section id="contact">
+  <div class="contact-wrapper">
+    <h2 class="contact-title">Men bilan bog‘laning</h2>
+    <p class="contact-subtitle">
+      Har qanday savol, hamkorlik taklifi yoki xizmatlar uchun bemalol yozing!
+    </p>
+    <form class="contact-form">
+      <div class="form-group">
+        <input type="text" placeholder="Ismingiz" required />
+      </div>
+      <div class="form-group">
+        <input type="email" placeholder="Email manzilingiz" required />
+      </div>
+      <div class="form-group">
+        <textarea rows="5" placeholder="Xabaringiz..." required></textarea>
+      </div>
+      <button type="submit">Yuborish</button>
+    </form>
+    <div class="contact-socials">
+      <a href="#"><i class="fab fa-telegram-plane"></i></a>
+      <a href="#"><i class="fab fa-instagram"></i></a>
+      <a href="#"><i class="fab fa-facebook-f"></i></a>
+      <a href="#"><i class="fab fa-twitter"></i></a>
+    </div>
+  </div>
+</section>
+
+
+
 		<script>
 			function hamburg() {
 				document.getElementById('dropdown').classList.add('active');
